2006-07-10  Jakub Jelinek  <jakub@redhat.com>

	* ld-powerpc/tlsso32.r: Adjust.
	* ld-powerpc/tlsso32.d: Adjust.
	* ld-powerpc/tlsso32.g: Adjust.
	* ld-powerpc/tlsso.r: Adjust.
	* ld-powerpc/tlsso.g: Adjust.
	* ld-powerpc/tlstocso.g: Adjust.

2006-07-05  Thiemo Seufer  <ths@mips.com>

	* ld-mips-elf/multi-got-1.d, ld-mips-elf/tls-multi-got-1.got,
	ld-mips-elf/tls-multi-got-1.r: Update multigot testcases.

2006-06-30  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-i386/tlsbindesc.dd: Updated to expect xchg %ax,%ax instead
	of 2 nops.
	* ld-i386/tlsdesc.dd: Likewise.
	* ld-i386/tlsgdesc.dd: Likewise.
	* ld-x86-64/tlsbindesc.dd: Likewise.
	* ld-x86-64/tlsdesc.dd: Likewise.
	* ld-x86-64/tlsdesc.pd: Likewise.
	* ld-x86-64/tlsgdesc.dd: Likewise.

2006-06-29  Jakub Jelinek  <jakub@redhat.com>

	PR ld/2513
	* ld-i386/tlsbin.dd: Fix expected output.

2006-06-21  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/tls_common.exp: Match 32-bit output.

2006-06-20  Jakub Jelinek  <jakub@redhat.com>

	* ld-elf/tls_common.exp: New test.
	* ld-elf/tls_common.s: New file.

2006-06-20  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/eh1.d: Update for fewer program headers.
	* ld-elf/eh2.d: Likewise.
	* ld-elf/eh3.d: Likewise.

2006-06-19  Vladimir Prus  <vladimir@codesourcery.com>

	* ld-arm/arm-elf.exp: New test.
	* ld-arm/use-thumb-lib.s: New file.
	* ld-arm/use-thumb-lib.sym: New file.

2006-06-15  Mark Shinwell  <shinwell@codesourcery.com>

	* ld-arm/group-relocs-alu-bad.d: New test.
	* ld-arm/group-relocs-alu-bad.s: New test.
	* ld-arm/group-relocs.d: New test.
	* ld-arm/group-relocs-ldc-bad.d: New test.
	* ld-arm/group-relocs-ldc-bad.s: New test.
	* ld-arm/group-relocs-ldr-bad.d: New test.
	* ld-arm/group-relocs-ldr-bad.s: New test.
	* ld-arm/group-relocs-ldrs-bad.d: New test.
	* ld-arm/group-relocs-ldrs-bad.s: New test.
	* ld-arm/group-relocs.s: New test.
	* ld-arm/arm-elf.exp: Wire in new tests.

2006-06-14  Richard Sandiford  <richard@codesourcery.com>
