@@ -27,14 +27,14 @@ There are 13 section headers.*
 #...
 Relocation section '\.rela\.dyn' at offset 0x[0-9a-f]+ contains 1 entries:
 #...
-00002200  0000000c R_CRIS_RELATIVE                              00000158
+00002[12][0-9a-f][048c]  0000000c R_CRIS_RELATIVE                              00000150
 #...
 Symbol table '\.dynsym' contains 4 entries:
    Num:    Value  Size Type    Bind   Vis      Ndx Name
      0: 0+     0 NOTYPE  LOCAL  DEFAULT  UND 
      1: [0-9a-f]+     0 SECTION LOCAL  DEFAULT    7 
      2: 0+     0 OBJECT  GLOBAL DEFAULT  ABS TST1
-     3: 0+15c     0 FUNC    GLOBAL DEFAULT    7 export_1@@TST1
+     3: 0+154     0 FUNC    GLOBAL DEFAULT    7 export_1@@TST1
 
 Symbol table '\.symtab' contains 18 entries:
    Num:    Value  Size Type    Bind   Vis      Ndx Name
@@ -48,11 +48,11 @@ Symbol table '\.symtab' contains 18 entries:
      7: [0-9a-f]+     0 SECTION LOCAL  DEFAULT    7 
      8: [0-9a-f]+     0 SECTION LOCAL  DEFAULT    8 
      9: [0-9a-f]+     0 SECTION LOCAL  DEFAULT    9 
-    10: 0+216c     0 OBJECT  LOCAL  HIDDEN  ABS _DYNAMIC
-    11: 0+2204     0 NOTYPE  LOCAL  DEFAULT  ABS __bss_start
-    12: 0+2204     0 NOTYPE  LOCAL  DEFAULT  ABS _edata
-    13: 0+21f4     0 OBJECT  LOCAL  HIDDEN  ABS _GLOBAL_OFFSET_TABLE_
-    14: 0+2220     0 NOTYPE  LOCAL  DEFAULT  ABS _end
-    15: 0+158     0 FUNC    LOCAL  DEFAULT    7 dsofn
+    10: 0+2..[046c]     0 OBJECT  LOCAL  HIDDEN  ABS _DYNAMIC
+    11: 0+2..[046c]     0 NOTYPE  LOCAL  DEFAULT  ABS __bss_start
+    12: 0+2..[046c]     0 NOTYPE  LOCAL  DEFAULT  ABS _edata
+    13: 0+2..[046c]     0 OBJECT  LOCAL  HIDDEN  ABS _GLOBAL_OFFSET_TABLE_
+    14: 0+2..[046c]     0 NOTYPE  LOCAL  DEFAULT  ABS _end
+    15: 0+150     0 FUNC    LOCAL  DEFAULT    7 dsofn
     16: 0+     0 OBJECT  GLOBAL DEFAULT  ABS TST1
-    17: 0+15c     0 FUNC    GLOBAL DEFAULT    7 export_1
+    17: 0+154     0 FUNC    GLOBAL DEFAULT    7 export_1
