@@ -1,3 +1,7 @@
+2006-07-11  Hans-Peter Nilsson  <hp@axis.com>
+
+	* ld-cris/libdso-2.d: Adjust for recent hash-related changes.
+
 2006-07-10  Jakub Jelinek  <jakub@redhat.com>
 
 	* ld-powerpc/tlsso32.r: Adjust.
